# lispos

./: .gitignore  CLAUDE.md  todo.txt
LALRGen/: ACTS.c  ASSORT.c  BINTOASC.c  CMakeLists.txt  ENHANCEMENTS.md  FERR.c  FIRST.c  FPUTSTR.c  HASH.c  HASHADD.c  INPUT.c  LALRGen.001  LALRGen.APS  LALRGen.dsp  LALRGen.mak  LALRGen.plg  LALRGen.vcp  LALRGen.vcproj  LALRGen.vcxproj  LALRGen.vcxproj.filters  LEXYY.c  MAIN.c  MOVEFILE.c  OLDHASH.c  ONFERR.c  PRINTV.c  PRNT.c  SIGNON.c  STOK.c  YYCODE.c  YYDOLLAR.c  YYDRIVER.c  YYOUT.c  YYPATCH.c  YYSTATE.c  YYSTATE.c.new  YYSTATE_clean.c  bakup.bat  check_sizes.c  check_tint.c  (+11 more)
LALRGen/build_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  LALRGen.sln  LALRGen.vcxproj  LALRGen.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
LALRGen/docs/: BUILDING_C_COMPILER.md  BUILDING_LISP_COMPILER.md  CATEGORICAL_PROVER_INTEGRATION.md  LALRGEN_OTHER_LANGUAGES.md  LIBFIRM_BACKEND.md  LINKER_COMPATIBILITY.md  MODERN_COMPILER_FEATURES.md  OPTIMIZING_CODE_GENERATORS.md  RDAM_ALTERNATIVE_TO_LALR.md  RUST_AND_LALR_ANALYSIS.md  WHY_NO_DEPENDENT_TYPES.md
LALRGen/test_grammars/: TEST_RESULTS.md  ansi_c_full.y  synout0.cpp  test1_minimal.y  test2_expr_simple.y  test3_expr_precedence.y  test4_c_subset.y  test5_c_extended.y
LispCompiler/: CMakeLists.txt
LispCompiler/docs/: ADDITIONAL_UX_FEATURES.md  DEBUGGER_COMPLETE.md  DEBUGGER_DESIGN.md  DEBUGGER_FULL_LAUNCH_REQUIREMENTS.md  DEBUGGER_IMPLEMENTATION.md  DEBUGGER_TEST_RESULTS.md  ESSENTIALS_IMPLEMENTATION.md  ESSENTIALS_TEST_RESULTS.md  GC_TEST_RESULTS.md  LISP_VERSION.md  MEMORY_MANAGER_IMPLEMENTATION.md  MEMORY_RECURSION_SOLUTIONS.md  PRODUCTION_ESSENTIALS.md  PRODUCTION_READINESS.md  R6RS_IMPLEMENTATION.md  R7RS_IMPLEMENTATION.md  README.md  REAL_WORLD_ESSENTIALS.md  REAL_WORLD_TESTS.md  REAL_WORLD_TEST_RESULTS.md  RECOMMENDED_TEST_PROJECTS.md  SCHEME_STANDARDS.md  TEST_RESULTS.md  UX_ESSENTIALS.md  VSCODE_INTEGRATION.md  VSCODE_VERIFICATION.md
LispCompiler/src/: codegen.c  codegen.h  debug.c  debug.h  env.c  env.h  eval.c  eval.h  lexer.c  lexer.h  lisp.c  lisp.h  lisp_grammar.y  main.c  parser.c  parser.h  primitives.c  primitives.h
LispCompiler/test/: comprehensive.scm  cond_bp_test.scm  cond_bp_test2.scm  core_test_suite.scm  debug_factorial.scm  debug_factorial2.scm  debug_nested.scm  debug_test.scm  debugger_test.scm  exception_test.scm  exception_test2.scm  factorial.scm  hello.scm  list_ops.scm  r6rs_test.scm  r7rs_test.scm  real_world_test.scm  recursion_test.scm  vscode_test.scm
LispCompiler/vscode-scheme/: .vscodeignore  README.md  language-configuration.json  package.json
LispCompiler/vscode-scheme/src/: debugAdapter.ts  extension.ts
LispCompiler/vscode-scheme/syntaxes/: scheme.tmLanguage.json
SchemeEdit/: CMakeLists.txt
SchemeEdit/docs/: README.md  RIDER_FEATURES.md  RIDER_LIKE_IDE_PLAN.md  USER_GUIDE.md  WHY_CPP_NOT_SCHEME.md
SchemeEdit/examples/: 01_hello_world.scm  02_variables.scm  03_functions.scm  04_conditionals.scm  05_recursion.scm  06_lists.scm  07_higher_order.scm  08_complete_program.scm
SchemeEdit/src/: debugcontroller.cpp  debugcontroller.h  editor.cpp  editor.h  findreplacedialog.cpp  findreplacedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  schemehighlighter.cpp  schemehighlighter.h  schemerunner.cpp  schemerunner.h
